UI/API/QA Configuration for Login Feature (login-config.yaml)

--- a/public/login.html
+++ b/public/login.html
@@ -17,6 +17,9 @@
   <div id="welcome" style="display:none;">
     Welcome
   </div>
+  <div class="error-message" style="display:none; color: red;">
+    Error message will appear here
+  </div>
   <script>
     // For Cypress test: show welcome message on submit
     document.querySelector('form').addEventListener('submit', function(e) {
