--- a/public/login.html
+++ b/public/login.html
@@ -9,7 +9,7 @@
   <h1>Login</h1>
   <form method="POST" action="/login">
     <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required><br><br>
+    <input type="text" id="user-name" name="username" required><br><br>
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required><br><br>
     <button type="submit">Login</button>
